--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
 
     <section class="hero">
         <h1>Hi, I'm <span>Your Name</span></h1>
-        <p>I'm a passionate developer focused on building great things.</p>
-        <a href="#projects" class="btn">View My Work</a>
+        <p>Passionate about creating modern and intuitive web experiences.</p>
+        <a href="#projects" class="btn">See My Work</a>
     </section>
 
-    <section id="about">
+    <section id="about" class="glass">
         <h2>About Me</h2>
-        <p>I'm a software developer specializing in web applications and AI.</p>
+        <p>I specialize in crafting elegant and efficient web solutions. Let's build something amazing together.</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project-list">
-            <div class="project">
+            <div class="project glass">
                 <h3>Project 1</h3>
-                <p>A cool project description.</p>
+                <p>Innovative web app built with React and Node.js.</p>
             </div>
-            <div class="project">
+            <div class="project glass">
                 <h3>Project 2</h3>
-                <p>Another great project.</p>
+                <p>AI-powered chatbot leveraging OpenAI APIs.</p>
             </div>
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="glass">
         <h2>Contact Me</h2>
         <form>
             <input type="text" placeholder="Your Name" required>
